[package]
name = "rust_lib_mangayomi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
image = "0.25.8"
chrono = "0.4.42"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls-webpki-roots", "stream", "multipart", "socks", "brotli", "gzip"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
epub = "2.1.5"
zip = "7.2.0"
