[package]
name = "rust_lib_mangayomi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
image = "0.25.10"
chrono = "0.4.44"
futures-util = "0.3.31"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "rustls", "stream", "multipart", "socks", "brotli", "gzip"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.16"
epub = "2.1.5"
zip = "8.5.0"
